--- a/index.html
+++ b/index.html
@@ -1,36 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Portfólio</title>
 </head>
-<body>
-    <div class="card">
-        <img src="" alt="Filme" class="card-image">
-        <img src="images/avenger.jfif" alt="Filme" class="card-image">
-        <div class="card-content">
-            <h1 class="card-title">Filme</h1>
-            <p class="card-text">Um ótimo filme.</p>
-            <div class="card-info">
-                <div class="content-info">
-                    <img class="image-price" src="" alt="">
-                    <img class="image-price" src="images/price.png" alt="">
-                    <span class="price">R$35</span>
-                </div>
-                <div class="content-info">
-                    <img class="save-icon" src="images/save.png" alt="Salvar">
-                    <span class="save-text">Salvar</span>
-                </div>
-            </div>
-            <div class="profile">
-                <img src="" alt="profile" class="profile-avatar">
 
-@@ -24,5 +28,5 @@
+<body>
+    <div class="content">
+        <div class="card">
+            <img src="images/avenger.jfif" alt="Filme" class="card-image">
+            <div class="card-content">
+                <h1 class="card-title">Filme</h1>
+                <p class="card-text">Um ótimo filme.</p>
+                <div class="card-info">
+                    <div class="content-info">
+                        <img class="image-price" src="images/price.png" alt="">
+                        <span class="price">R$35</span>
+                    </div>
+                    <div class="content-info">
+                        <img class="save-icon" src="images/save.png" alt="Salvar">
+                        <span class="save-text">Salvar</span>
+                    </div>
+                </div>
+                <div class="profile">
+                    <img src="" alt="profile" class="profile-avatar">
+                    <span class="profile-name">Created by Luara</span>
+                </div>
             </div>
         </div>
+
+        <div class="card">
+            <img src="images/avenger.jfif" alt="Filme" class="card-image">
+            <div class="card-content">
+                <h1 class="card-title">Filme</h1>
+                <p class="card-text">Um ótimo filme.</p>
+                <div class="card-info">
+                    <div class="content-info">
+                        <img class="image-price" src="images/price.png" alt="">
+                        <span class="price">R$35</span>
+                    </div>
+                    <div class="content-info">
+                        <img class="save-icon" src="images/save.png" alt="Salvar">
+                        <span class="save-text">Salvar</span>
+                    </div>
+                </div>
+                <div class="profile">
+                    <img src="" alt="profile" class="profile-avatar">
+                    <span class="profile-name">Created by Luara</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="images/avenger.jfif" alt="Filme" class="card-image">
+            <div class="card-content">
+                <h1 class="card-title">Filme</h1>
+                <p class="card-text">Um ótimo filme.</p>
+                <div class="card-info">
+                    <div class="content-info">
+                        <img class="image-price" src="images/price.png" alt="">
+                        <span class="price">R$35</span>
+                    </div>
+                    <div class="content-info">
+                        <img class="save-icon" src="images/save.png" alt="Salvar">
+                        <span class="save-text">Salvar</span>
+                    </div>
+                </div>
+                <div class="profile">
+                    <img src="" alt="profile" class="profile-avatar">
+                    <span class="profile-name">Created by Luara</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="images/avenger.jfif" alt="Filme" class="card-image">
+            <div class="card-content">
+                <h1 class="card-title">Filme</h1>
+                <p class="card-text">Um ótimo filme.</p>
+                <div class="card-info">
+                    <div class="content-info">
+                        <img class="image-price" src="images/price.png" alt="">
+                        <span class="price">R$35</span>
+                    </div>
+                    <div class="content-info">
+                        <img class="save-icon" src="images/save.png" alt="Salvar">
+                        <span class="save-text">Salvar</span>
+                    </div>
+                </div>
+                <div class="profile">
+                    <img src="" alt="profile" class="profile-avatar">
+                    <span class="profile-name">Created by Luara</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="images/avenger.jfif" alt="Filme" class="card-image">
+            <div class="card-content">
+                <h1 class="card-title">Filme</h1>
+                <p class="card-text">Um ótimo filme.</p>
+                <div class="card-info">
+                    <div class="content-info">
+                        <img class="image-price" src="images/price.png" alt="">
+                        <span class="price">R$35</span>
+                    </div>
+                    <div class="content-info">
+                        <img class="save-icon" src="images/save.png" alt="Salvar">
+                        <span class="save-text">Salvar</span>
+                    </div>
+                </div>
+                <div class="profile">
+                    <img src="" alt="profile" class="profile-avatar">
+                    <span class="profile-name">Created by Luara</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="images/avenger.jfif" alt="Filme" class="card-image">
+            <div class="card-content">
+                <h1 class="card-title">Filme</h1>
+                <p class="card-text">Um ótimo filme.</p>
+                <div class="card-info">
+                    <div class="content-info">
+                        <img class="image-price" src="images/price.png" alt="">
+                        <span class="price">R$35</span>
+                    </div>
+                    <div class="content-info">
+                        <img class="save-icon" src="images/save.png" alt="Salvar">
+                        <span class="save-text">Salvar</span>
+                    </div>
+                </div>
+                <div class="profile">
+                    <img src="" alt="profile" class="profile-avatar">
+                    <span class="profile-name">Created by Luara</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="images/avenger.jfif" alt="Filme" class="card-image">
+            <div class="card-content">
+                <h1 class="card-title">Filme</h1>
+                <p class="card-text">Um ótimo filme.</p>
+                <div class="card-info">
+                    <div class="content-info">
+                        <img class="image-price" src="images/price.png" alt="">
+                        <span class="price">R$35</span>
+                    </div>
+                    <div class="content-info">
+                        <img class="save-icon" src="images/save.png" alt="Salvar">
+                        <span class="save-text">Salvar</span>
+                    </div>
+                </div>
+                <div class="profile">
+                    <img src="" alt="profile" class="profile-avatar">
+                    <span class="profile-name">Created by Luara</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="images/avenger.jfif" alt="Filme" class="card-image">
+            <div class="card-content">
+                <h1 class="card-title">Filme</h1>
+                <p class="card-text">Um ótimo filme.</p>
+                <div class="card-info">
+                    <div class="content-info">
+                        <img class="image-price" src="images/price.png" alt="">
+                        <span class="price">R$35</span>
+                    </div>
+                    <div class="content-info">
+                        <img class="save-icon" src="images/save.png" alt="Salvar">
+                        <span class="save-text">Salvar</span>
+                    </div>
+                </div>
+                <div class="profile">
+                    <img src="" alt="profile" class="profile-avatar">
+                    <span class="profile-name">Created by Luara</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="images/avenger.jfif" alt="Filme" class="card-image">
+            <div class="card-content">
+                <h1 class="card-title">Filme</h1>
+                <p class="card-text">Um ótimo filme.</p>
+                <div class="card-info">
+                    <div class="content-info">
+                        <img class="image-price" src="images/price.png" alt="">
+                        <span class="price">R$35</span>
+                    </div>
+                    <div class="content-info">
+                        <img class="save-icon" src="images/save.png" alt="Salvar">
+                        <span class="save-text">Salvar</span>
+                    </div>
+                </div>
+                <div class="profile">
+                    <img src="" alt="profile" class="profile-avatar">
+                    <span class="profile-name">Created by Luara</span>
+                </div>
+            </div>
+        </div>
+
     </div>
 </body>
-</body> 
+
 </html>
