created card stylizations and descriptions

--- a/index.html
+++ b/index.html
@@ -5,20 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Portfólio</title>
 </head>
 
 <body>
     <div class="content">
         <div class="card">
-            <img src="images/avenger.jfif" alt="Filme" class="card-image">
+            <img src="images/avengers.jfif" alt="Filme" class="card-image">
             <div class="card-content">
-                <h1 class="card-title">Filme</h1>
-                <p class="card-text">Um ótimo filme.</p>
+                <h1 class="card-title">Os Vingadores</h1>
+                <p class="card-text">O filme mostra a jornada dos amados heróis da marvel, os Vingadores, contra um mal
+                    muito maior que
+                    antes, fazendo os recorrer a chamar a turma do Mickey Mouse.
+                </p>
                 <div class="card-info">
                     <div class="content-info">
                         <img class="image-price" src="images/price.png" alt="">
-                        <span class="price">R$35</span>
+                        <span class="price">R$30</span>
                     </div>
                     <div class="content-info">
                         <img class="save-icon" src="images/save.png" alt="Salvar">
@@ -26,17 +30,19 @@
                     </div>
                 </div>
                 <div class="profile">
-                    <img src="" alt="profile" class="profile-avatar">
+                    <img src="images/profile.jpg" alt="profile" class="profile-avatar">
                     <span class="profile-name">Created by Luara</span>
                 </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="images/avenger.jfif" alt="Filme" class="card-image">
+            <img src="images/titans.jfif" alt="Filme" class="card-image">
             <div class="card-content">
-                <h1 class="card-title">Filme</h1>
-                <p class="card-text">Um ótimo filme.</p>
+                <h1 class="card-title">Titãs: A Ascensão dos Deuses</h1>
+                <p class="card-text">Um grupo improvável de heróis luta para evitar que antigos deuses despertem e
+                    tragam o caos para o mundo.
+                    Mitologia e ação se encontram neste épico de tirar o fôlego.</p>
                 <div class="card-info">
                     <div class="content-info">
                         <img class="image-price" src="images/price.png" alt="">
@@ -48,21 +54,23 @@
                     </div>
                 </div>
                 <div class="profile">
-                    <img src="" alt="profile" class="profile-avatar">
+                    <img src="images/profile.jpg" alt="profile" class="profile-avatar">
                     <span class="profile-name">Created by Luara</span>
                 </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="images/avenger.jfif" alt="Filme" class="card-image">
+            <img src="images/deadpool.jfif" alt="Filme" class="card-image">
             <div class="card-content">
-                <h1 class="card-title">Filme</h1>
-                <p class="card-text">Um ótimo filme.</p>
+                <h1 class="card-title">Deadpool: O Mercenário Tagarela</h1>
+                <p class="card-text"> Deadpool está de volta e mais sarcástico do que nunca! Entre lutas absurdas e
+                    piadas fora de hora,
+                    ele vai mostrar que mesmo um anti-herói pode salvar o dia (ou pelo menos tentar).</p>
                 <div class="card-info">
                     <div class="content-info">
                         <img class="image-price" src="images/price.png" alt="">
-                        <span class="price">R$35</span>
+                        <span class="price">R$25</span>
                     </div>
                     <div class="content-info">
                         <img class="save-icon" src="images/save.png" alt="Salvar">
@@ -70,21 +78,23 @@
                     </div>
                 </div>
                 <div class="profile">
-                    <img src="" alt="profile" class="profile-avatar">
+                    <img src="images/profile.jpg" alt="profile" class="profile-avatar">
                     <span class="profile-name">Created by Luara</span>
                 </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="images/avenger.jfif" alt="Filme" class="card-image">
+            <img src="images/mulher-maravilha.jfif" alt="Filme" class="card-image">
             <div class="card-content">
-                <h1 class="card-title">Filme</h1>
-                <p class="card-text">Um ótimo filme.</p>
+                <h1 class="card-title">Mulher-Maravilha: A Guerreira da Justiça</h1>
+                <p class="card-text">Diana Prince enfrenta novos inimigos e descobre segredos de seu passado em uma
+                    aventura que combina força,
+                    sabedoria e muito coração.</p>
                 <div class="card-info">
                     <div class="content-info">
                         <img class="image-price" src="images/price.png" alt="">
-                        <span class="price">R$35</span>
+                        <span class="price">R$18</span>
                     </div>
                     <div class="content-info">
                         <img class="save-icon" src="images/save.png" alt="Salvar">
@@ -92,21 +102,23 @@
                     </div>
                 </div>
                 <div class="profile">
-                    <img src="" alt="profile" class="profile-avatar">
+                    <img src="images/profile.jpg" alt="profile" class="profile-avatar">
                     <span class="profile-name">Created by Luara</span>
                 </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="images/avenger.jfif" alt="Filme" class="card-image">
+            <img src="images/pantera.jfif" alt="Filme" class="card-image">
             <div class="card-content">
-                <h1 class="card-title">Filme</h1>
-                <p class="card-text">Um ótimo filme.</p>
+                <h1 class="card-title">Pantera Negra: Wakanda Para Sempre</h1>
+                <p class="card-text">Em uma luta pela sobrevivência de Wakanda,
+                    T’Challa enfrenta desafios que vão testar sua liderança e o poder do vibranium. Uma jornada de
+                    orgulho e legado.</p>
                 <div class="card-info">
                     <div class="content-info">
                         <img class="image-price" src="images/price.png" alt="">
-                        <span class="price">R$35</span>
+                        <span class="price">R$10</span>
                     </div>
                     <div class="content-info">
                         <img class="save-icon" src="images/save.png" alt="Salvar">
@@ -114,21 +126,23 @@
                     </div>
                 </div>
                 <div class="profile">
-                    <img src="" alt="profile" class="profile-avatar">
+                    <img src="images/profile.jpg" alt="profile" class="profile-avatar">
                     <span class="profile-name">Created by Luara</span>
                 </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="images/avenger.jfif" alt="Filme" class="card-image">
+            <img src="images/flash.jfif" alt="Filme" class="card-image">
             <div class="card-content">
-                <h1 class="card-title">Filme</h1>
-                <p class="card-text">Um ótimo filme.</p>
+                <h1 class="card-title">The Flash: Corrida Contra o Tempo</h1>
+                <p class="card-text">Quando uma anomalia no tempo ameaça destruir a realidade,
+                    Barry Allen corre mais rápido do que nunca para salvar o universo e consertar seus próprios erros.
+                </p>
                 <div class="card-info">
                     <div class="content-info">
                         <img class="image-price" src="images/price.png" alt="">
-                        <span class="price">R$35</span>
+                        <span class="price">R$32</span>
                     </div>
                     <div class="content-info">
                         <img class="save-icon" src="images/save.png" alt="Salvar">
@@ -136,21 +150,22 @@
                     </div>
                 </div>
                 <div class="profile">
-                    <img src="" alt="profile" class="profile-avatar">
+                    <img src="images/profile.jpg" alt="profile" class="profile-avatar">
                     <span class="profile-name">Created by Luara</span>
                 </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="images/avenger.jfif" alt="Filme" class="card-image">
+            <img src="images/superman.jfif" alt="Filme" class="card-image">
             <div class="card-content">
-                <h1 class="card-title">Filme</h1>
-                <p class="card-text">Um ótimo filme.</p>
+                <h1 class="card-title">Superman: Um mundo de vidro</h1>
+                <p class="card-text">Clark Kent encara um dilema moral quando um antigo inimigo kryptoniano retorna.
+                    A luta entre o dever e os sentimentos humanos nunca foi tão intensa.</p>
                 <div class="card-info">
                     <div class="content-info">
                         <img class="image-price" src="images/price.png" alt="">
-                        <span class="price">R$35</span>
+                        <span class="price">R$26</span>
                     </div>
                     <div class="content-info">
                         <img class="save-icon" src="images/save.png" alt="Salvar">
@@ -158,21 +173,23 @@
                     </div>
                 </div>
                 <div class="profile">
-                    <img src="" alt="profile" class="profile-avatar">
+                    <img src="images/profile.jpg" alt="profile" class="profile-avatar">
                     <span class="profile-name">Created by Luara</span>
                 </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="images/avenger.jfif" alt="Filme" class="card-image">
+            <img src="images/viuva-negra.jfif" alt="Filme" class="card-image">
             <div class="card-content">
-                <h1 class="card-title">Filme</h1>
-                <p class="card-text">Um ótimo filme.</p>
+                <h1 class="card-title">Viúva Negra: Teias e Redenção</h1>
+                <p class="card-text">Viúva Negra e Homem-Aranha se unem para enfrentar uma ameaça global.
+                    Juntos, eles enfrentam inimigos antigos e novos, descobrindo que seus destinos estão entrelaçados.
+                </p>
                 <div class="card-info">
                     <div class="content-info">
                         <img class="image-price" src="images/price.png" alt="">
-                        <span class="price">R$35</span>
+                        <span class="price">R$55</span>
                     </div>
                     <div class="content-info">
                         <img class="save-icon" src="images/save.png" alt="Salvar">
@@ -180,21 +197,23 @@
                     </div>
                 </div>
                 <div class="profile">
-                    <img src="" alt="profile" class="profile-avatar">
+                    <img src="images/profile.jpg" alt="profile" class="profile-avatar">
                     <span class="profile-name">Created by Luara</span>
                 </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="images/avenger.jfif" alt="Filme" class="card-image">
+            <img src="images/liga-justiça.jfif" alt="Filme" class="card-image">
             <div class="card-content">
-                <h1 class="card-title">Filme</h1>
-                <p class="card-text">Um ótimo filme.</p>
+                <h1 class="card-title">Liga da Justiça: O Amanhecer da União</h1>
+                <p class="card-text">Batman, Superman, Mulher-Maravilha e outros heróis se unem para enfrentar uma
+                    ameaça tão poderosa que só a união pode derrotá-la.
+                    O destino da Terra está em suas mãos!</p>
                 <div class="card-info">
                     <div class="content-info">
                         <img class="image-price" src="images/price.png" alt="">
-                        <span class="price">R$35</span>
+                        <span class="price">R$40</span>
                     </div>
                     <div class="content-info">
                         <img class="save-icon" src="images/save.png" alt="Salvar">
@@ -202,7 +221,7 @@
                     </div>
                 </div>
                 <div class="profile">
-                    <img src="" alt="profile" class="profile-avatar">
+                    <img src="images/profile.jpg" alt="profile" class="profile-avatar">
                     <span class="profile-name">Created by Luara</span>
                 </div>
             </div>
