--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+
+    <header>
+        <img src="images/logo.png" alt="">
+        <h1>ENTRE EM UM MUNDO MÁGICO</h1>
+    </header>
+
     <div class="content">
         <div class="card">
             <img src="images/avengers.jfif" alt="Filme" class="card-image">
